# aelfrice

./: .coderabbit.yaml  .github-pii-exempt  .gitignore  .gitleaks.toml  .replay-soak-status.json  .typos.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  _typos.toml  pyproject.toml  renovate.json  v2.0.0-cron-2026-05-08.json  v2.0.0-cron-2026-05-09.json  v2.0.0-cron-2026-05-10.json  v2.0.0-cron-2026-05-11.json  v2.0.0-cron-2026-05-12.json  v2.0.0-cron-2026-05-13.json  v2.0.0-cron-2026-05-14.json  v2.0.0-cron-2026-05-15.json  v2.0.0-cron-2026-05-16.json  v2.0.0-cron-2026-05-17.json  v2.0.0-cron-2026-05-18.json  v2.0.0-cron-2026-05-19.json  v2.0.0-cron-2026-05-20.json  v2.0.0-cron-2026-05-21.json  v2.0.0-cron-2026-05-22.json  v2.0.0-cron-2026-05-23.json  v2.0.0-cron-2026-05-24.json  v2.0.0-cron-2026-05-25.json  v2.0.0-cron-2026-05-26.json  v2.0.0-cron-2026-05-27.json  v2.0.0-cron-2026-05-28.json  v2.0.0-cron-2026-05-29.json  v2.0.0-cron-2026-05-30.json  v2.0.0-cron-2026-05-31.json  v2.0.0-cron-2026-06-01.json  (+52 more)
.githooks/: commit-msg  pre-push
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: auto-add-to-board.yml  auto-rebase-open-prs.yml  auto-status-board.yml  auto-unblock-on-blocker-close.yml  bench-canonical.yml  bench-smoke.yml  ci.yml  codeql.yml  deadcode.yml  dep-graph-render.yml  e2e.yml  eval-calibration.yml  flag-stale-open-prs.yml  history-scan-debug.yml  issue-creation-audit.yml  label-docs.yml  link-check.yml  merge-train.yml  migration-policy-check.yml  mutation.yml  post-release-docs-issue.yml  pr-size-soft-cap.yml  publish.yml  release-drafter.yml  replay-soak-gate.yml  replay-soak.yml  staging-gate.yml  stale.yml  typos.yml  zizmor.yml
CHANGELOG/: v0.md  v1.md  v2.md  v3.md  v4.md
benchmarks/: README.md  amabench_adapter.py  badge.py  bfs_latency_v3.py  cadence_replay.py  entity_persist_ablation.py  expansion_gate_bench.py  hrr_expand_ablation.py  hrr_structural_ablation.py  intentional_clustering_ablation.py  locomo_adapter.py  locomo_generate.py  locomo_score.py  locomo_score_protocol.py  longmemeval_adapter.py  longmemeval_budget_sweep.py  longmemeval_score.py  mab_adapter.py  mab_entity_index_adapter.py  mab_reader.py  origin_tiebreak_ablation.py  qa_scoring.py  recalibrate.py  run.py  structmemeval_adapter.py  temporal_blend_sweep.py  temporal_spine_ablation.py  temporal_spine_latency.py  temporal_spine_shadow.py  tolerance.py  verify_clean.py
benchmarks/context-rebuilder/: .gitignore  README.md  calibration_v1_4_0.json  calibration_v1_5_0_dynamic.json  eval_harness.py
benchmarks/context_rebuilder/: __init__.py  __main__.py  calibrate.py  dynamic_probe.py  inject.py  kappa.py  measure.py  replay.py  score.py
benchmarks/fixtures/: cadence_replay_sample.json  expansion_gate_acceptance.jsonl  expansion_gate_stub.jsonl
benchmarks/oracle_fixtures/: locomo_scorer.json  mab_scorer.json
benchmarks/pollution_recovery/: __init__.py  __main__.py  run.py
benchmarks/posterior_ranking/: __init__.py  __main__.py  ac6_50k.py  baseline.json  ece.py  mrr_uplift.py  run.py
benchmarks/results/: temporal_half_life_sweep.json  v1.2.0-pre.json  v2.0.0.json  v3.0.1-mab-ar-backfill.json  v3.0.1-mab-cr-backfill.json  v3.0.1-mab-lru-backfill.json  v3.0.1-mab-ttl-backfill.json  v3.0.1-structmemeval-answer-correctness.json  v3.0.1-structmemeval-backfill.json  v3.0.1.json  v3.6.0-locomo-n200-clean.json
benchmarks/uri_baki_retest/: RESULTS.md  __init__.py  harness.py  results_n10k.json  results_n10k.txt  results_n50k.json  results_n50k.txt
docs/: ARCHITECTURE.md  BENCHMARKS.md  CLI_SURFACE_AUDIT.md  COMMANDS.md  CONFIG.md  HARNESS_INTEGRATION.md  INSTALL.md  LIMITATIONS.md  MCP.md  PHILOSOPHY.md  PRIVACY.md  QUICKSTART.md  README.md  RELEASING.md  ROADMAP.md  SLASH_COMMANDS.md  V2_REENTRY_QUEUE.md  bayesian_ranking.md  belief_retention_class.md  bfs_multihop.md  commit_ingest_hook.md  context_rebuilder.md  dedup.md  edge_rerank.md  entity_index.md  eval_fixture_policy.md  feature-aelf-core.md  feature-aelf-delete-cli.md  feature-correction-detection-eval.md  feature-doc-linker.md  feature-hot-path.md  feature-hrr-integration.md  feature-hrr-vocab-bridge.md  feature-ingest-speaker-gate.md  feature-intentional-clustering.md  feature-phantom-trigger-generation.md  feature-posterior-temperature.md  feature-rerank-relevance-corpus.md  feature-type-aware-compression.md  feature-zeta-posterior-rerank.md  (+33 more)
docs/adr/: 0001-record-architecture-decisions.md  README.md  template.md  (+2 more)
scripts/: audit_rebuild_log.py  check-commit-msg.py  check_migration_policy.py  dep_graph_render.py  install-discretion-hook.sh  issue_creation_audit.py  probe_posterior_touch_correlation.py  replay-auto-unblock.py  replay_soak_run.py  replay_soak_streak.py  run_bench_gate.sh  setup-hooks.sh  sync-repo-settings.sh  validate_a4_corpus.py
tests/: conftest.py  replay_soak_runner.py  retrieve_uplift_runner.py  test_active_project_context.py  test_aelf_doctor_search_tool_telemetry.py  test_aelf_doctor_user_prompt_submit_telemetry.py  test_aelf_setup_agent_context.py  test_aelf_setup_pre_issue_guard.py  test_aelf_setup_search_tool_bash.py  test_agent_context_hook.py  test_amabench_scoring.py  test_answer_worthiness.py  test_audit_rebuild_log.py  test_auditor.py  test_auto_install.py  test_bayesian_inertia.py  test_bayesian_ranking.py  test_belief_categories_store.py  test_belief_context.py  test_belief_corroborations_retype_migration.py  test_bench_adapters_exit_code.py  test_bench_dispatcher.py  test_bench_qa_scoring.py  test_bench_smoke.py  test_bench_tolerance.py  test_bench_tolerance_skip.py  test_benchmark.py  test_benchmarks_badge.py  test_benchmarks_dir.py  test_bfs_depth_budget_meta.py  test_bfs_latency_v3.py  test_bfs_multihop.py  test_bm25_index.py  test_bm25_sidecar.py  test_bm25f_anchor_weight_meta.py  test_cadence.py  test_cadence_p2.py  test_cadence_p3.py  test_cadence_replay.py  test_cadence_score.py  (+339 more)
(+355 files in other folders)
