[project]
name = "aelfrice"
version = "1.0.0"
description = "Bayesian memory for LLM agents — local, SQLite-backed, feedback-driven."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
    { name = "robotrocketscience", email = "noreply@robotrocketscience.com" },
]
keywords = [
    "agent",
    "bayesian",
    "claude-code",
    "fts5",
    "knowledge-graph",
    "llm",
    "mcp",
    "memory",
    "retrieval",
    "sqlite",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/robotrocketscience/aelfrice"
Repository = "https://github.com/robotrocketscience/aelfrice"
Documentation = "https://github.com/robotrocketscience/aelfrice#readme"
Changelog = "https://github.com/robotrocketscience/aelfrice/blob/main/CHANGELOG.md"
Issues = "https://github.com/robotrocketscience/aelfrice/issues"

[project.scripts]
aelf = "aelfrice.cli:main"
aelf-hook = "aelfrice.hook:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "pyright>=1.1.409",
]
mcp = [
    "fastmcp>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aelfrice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Add the repo root to sys.path so tests can `import benchmarks` (the
# top-level academic-suite directory, dev-only and not packaged in the
# wheel). Equivalent to invoking `python -m pytest` instead of `pytest`,
# which is what CI (uv run pytest) does.
pythonpath = ["."]
# Test policy: every test must deterministically terminate. 5s default
# wall-clock timeout for unit/property tests. Subprocess-driven CLI/MCP
# integration tests (v0.6.0+) override per-test via @pytest.mark.timeout(N).
timeout = 5
strict_markers = true
markers = [
    "regression: cumulative integration scenarios run alongside the unit suite",
    "uat: v1.0 acceptance-criteria tests, run as the final pre-tag gate",
]

[tool.pyright]
include = ["src/aelfrice", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
