[project]
name = "aelfrice"
version = "1.4.0"
description = "Persistent memory for AI agents. Set up once. Stays out of your way. Local SQLite, auditable, no GPU, no network."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
    { name = "robotrocketscience", email = "noreply@robotrocketscience.com" },
]
keywords = [
    "agent",
    "bayesian",
    "claude-code",
    "fts5",
    "knowledge-graph",
    "llm",
    "mcp",
    "memory",
    "retrieval",
    "sqlite",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/robotrocketscience/aelfrice"
Repository = "https://github.com/robotrocketscience/aelfrice"
Documentation = "https://github.com/robotrocketscience/aelfrice#readme"
Changelog = "https://github.com/robotrocketscience/aelfrice/blob/main/CHANGELOG.md"
Issues = "https://github.com/robotrocketscience/aelfrice/issues"

[project.scripts]
aelf = "aelfrice.cli:main"
aelf-hook = "aelfrice.hook:main"
aelf-transcript-logger = "aelfrice.transcript_logger:main"
aelf-pre-compact-hook = "aelfrice.hook:main_pre_compact"
aelf-commit-ingest = "aelfrice.hook_commit_ingest:main"
aelf-search-tool-hook = "aelfrice.hook_search_tool:main"
aelf-session-start-hook = "aelfrice.hook:main_session_start"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "pyright>=1.1.409",
]
mcp = [
    "fastmcp>=0.2.0",
]
onboard-llm = [
    # Required only for `aelf onboard --llm-classify` (or
    # `[onboard.llm].enabled = true`). The default install does NOT
    # pull anthropic; the import is local to the call site so a
    # default install has no `anthropic` symbol resolvable at any
    # module load. Boundary policy: docs/llm_classifier.md § 4.
    "anthropic>=0.40",
]
archive = [
    # Required only for `aelf uninstall --archive`: AES-128-CBC + HMAC
    # via Fernet, with a scrypt-derived key from a user-supplied password.
    "cryptography>=42.0",
]
benchmarks = [
    # Sentence tokenization for MAB / LoCoMo adapters
    "nltk>=3.9",
    # GPT-4o-compatible token counting for MAB chunking parity
    "tiktoken>=0.7",
    # HuggingFace dataset loading for MAB / LongMemEval / AMA-Bench
    "datasets>=2.14",
    "huggingface_hub>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aelfrice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Add the repo root to sys.path so tests can `import benchmarks` (the
# top-level academic-suite directory, dev-only and not packaged in the
# wheel). Equivalent to invoking `python -m pytest` instead of `pytest`,
# which is what CI (uv run pytest) does.
pythonpath = ["."]
# Test policy: every test must deterministically terminate. 5s default
# wall-clock timeout for unit/property tests. Subprocess-driven CLI/MCP
# integration tests (v0.6.0+) override per-test via @pytest.mark.timeout(N).
timeout = 5
strict_markers = true
markers = [
    "regression: cumulative integration scenarios run alongside the unit suite",
    "uat: v1.0 acceptance-criteria tests, run as the final pre-tag gate",
]

[tool.pyright]
include = ["src/aelfrice", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "pyright>=1.1.409",
]
