[project]
name = "aelfrice"
version = "2.1.0"
description = "Persistent memory for AI agents. Set up once. Stays out of your way. Local SQLite, auditable, no GPU, no network."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
    { name = "robotrocketscience", email = "noreply@robotrocketscience.com" },
]
keywords = [
    "agent",
    "bayesian",
    "claude-code",
    "fts5",
    "knowledge-graph",
    "llm",
    "mcp",
    "memory",
    "retrieval",
    "sqlite",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    # v1.5.0 added numpy + scipy as runtime deps for the BM25Index
    # sparse matvec retrieval lane (`aelfrice.bm25`). See #148. Heavy
    # native deps (BLAS, libgfortran via scipy); the v1.x "no GPU, no
    # network" promise still holds, but the install footprint is no
    # longer stdlib-only. CHANGELOG records the change.
    "numpy>=2.0",
    "scipy>=1.11",
    # v1.7.0 added snowballstemmer for BM25F tokenisation parity with
    # FTS5's Porter stemmer (#154). Pure-Python, ~150 KB; deterministic
    # for the English Porter algorithm. Required so `q="banana"`
    # against content `"bananas"` matches in both lanes — flipping the
    # BM25F default-on without it loses the stemming win FTS5 gives
    # for free.
    "snowballstemmer>=2.2",
]

[project.urls]
Homepage = "https://github.com/robotrocketscience/aelfrice"
Repository = "https://github.com/robotrocketscience/aelfrice"
Documentation = "https://github.com/robotrocketscience/aelfrice#readme"
Changelog = "https://github.com/robotrocketscience/aelfrice/blob/main/CHANGELOG.md"
Issues = "https://github.com/robotrocketscience/aelfrice/issues"

[project.scripts]
aelf = "aelfrice.cli:main"
aelf-hook = "aelfrice.hook:main"
aelf-transcript-logger = "aelfrice.transcript_logger:main"
aelf-pre-compact-hook = "aelfrice.hook:main_pre_compact"
aelf-commit-ingest = "aelfrice.hook_commit_ingest:main"
aelf-search-tool-hook = "aelfrice.hook_search_tool:main"
aelf-session-start-hook = "aelfrice.hook:main_session_start"

[project.optional-dependencies]
mcp = [
    "fastmcp>=0.2.0",
    # Used directly via `from pydantic import Field` inside `serve()`
    # for tool-parameter constraints (Annotated[..., Field(...)]).
    # The import is lazy and gated to fastmcp availability, so pydantic
    # only needs to be present when the [mcp] extra is installed —
    # which is also when fastmcp pulls it in transitively. Declared
    # explicitly to satisfy deptry DEP001.
    "pydantic>=2",
]
onboard-llm = [
    # Required only for `aelf onboard --llm-classify` (or
    # `[onboard.llm].enabled = true`). The default install does NOT
    # pull anthropic; the import is local to the call site so a
    # default install has no `anthropic` symbol resolvable at any
    # module load. Boundary policy: docs/llm_classifier.md § 4.
    "anthropic>=0.40",
]
archive = [
    # Required only for `aelf uninstall --archive`: AES-128-CBC + HMAC
    # via Fernet, with a scrypt-derived key from a user-supplied password.
    "cryptography>=42.0",
]
benchmarks = [
    # Sentence tokenization for MAB / LoCoMo adapters
    "nltk>=3.9",
    # GPT-4o-compatible token counting for MAB chunking parity
    "tiktoken>=0.7",
    # HuggingFace dataset loading for MAB / LongMemEval / AMA-Bench
    "datasets>=2.14",
    "huggingface_hub>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aelfrice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Add the repo root to sys.path so tests can `import benchmarks` (the
# top-level academic-suite directory, dev-only and not packaged in the
# wheel). Equivalent to invoking `python -m pytest` instead of `pytest`,
# which is what CI (uv run pytest) does.
pythonpath = ["."]
# Test policy: every test must deterministically terminate. 5s default
# wall-clock timeout for unit/property tests. Subprocess-driven CLI/MCP
# integration tests (v0.6.0+) override per-test via @pytest.mark.timeout(N).
timeout = 5
strict_markers = true
markers = [
    "regression: cumulative integration scenarios run alongside the unit suite",
    "uat: v1.0 acceptance-criteria tests, run as the final pre-tag gate",
    "bench_gated: v2.0 bench-gate harness (#319) — skips when AELFRICE_CORPUS_ROOT is unset",
]

[tool.pyright]
include = ["src/aelfrice", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.deptry]
known_first_party = ["aelfrice", "benchmarks"]

[tool.deptry.per_rule_ignores]
# DEP002: declared in `[project.optional-dependencies.benchmarks]` extras
# but not imported by src/aelfrice. They are imported only by
# `benchmarks/` adapters; the extras stay because `pip install
# -e ".[benchmarks]"` is a documented contract (benchmarks/README.md).
DEP002 = [
    "nltk",
    "tiktoken",
    "datasets",
    "huggingface_hub",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "pyright>=1.1.409",
    # Property-based testing for replay-soak gate (#403). Pure Python,
    # no GPU/network deps; consistent with the v1.x install promise.
    "hypothesis>=6.100",
]
